# static-webserver

./: Cargo.toml  Dockerfile  README.md  mimes.txt
.github/workflows/: rust.yml
src/: connections.rs  file_cache.rs  main.rs  mime_types.rs
