[package]
name = "static-webserver"
version = "0.1.0"
authors = ["Elias Wendt"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0"
crossbeam-utils = "0"

hyper = { version = "0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0"
